--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,7 @@ services:
 # command to install dependencies
 install:
   - pip install -r requirements.txt
+  - pip install coverage coveralls
 # command to run tests
-script: python app_tests.py && python worker_tests.py
+script: coverage run --source=app.py app_tests.py
+after_success: coveralls
