--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,5 @@ install:
   - pip install -r requirements.txt
   - pip install coverage coveralls
 # command to run tests
-script: coverage run --source=app.py app_tests.py
+script: coverage run --source=web/app.py web/app_tests.py
 after_success: coveralls
