--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ services:
   - redis-server
 # command to install dependencies
 install:
-  - pip install -r requirements.txt
+  - pip install -r web/requirements.txt
   - pip install coverage coveralls
 # command to run tests
 script: coverage run --source=web/app.py web/app_tests.py
